fix: aligning search suggestion buttons

--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -23,6 +23,11 @@
 }
 
 .box {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+
     position: relative;
 }
 
@@ -42,6 +47,13 @@
     transition: 0.5s;
 }
 
+input:focus+.label-name {
+    margin-top: 30px;
+    top: -60%;
+    z-index: 2;
+    transition: 0.2s
+}
+
 input {
     position: relative;
     font-size: 15px;
@@ -56,13 +68,6 @@ input {
     box-sizing: content-box;
     z-index: 2;
     background-color: white;
-}
-
-input:focus+.label-name {
-    margin-top: 30px;
-    top: -60%;
-    z-index: 2;
-    transition: 0.2s
 }
 
 .search-field-button {
@@ -97,7 +102,7 @@ button:active {
 
 @media(max-width: 1125px) {
     .App-search {
-        margin-top: 30px;
+        margin: 30px 0 20px 0;
         height: auto;
     }
 
@@ -111,13 +116,28 @@ button:active {
 
     .search-field-button,
     .box {
-        margin: 5px;
+        margin: 10px;
         width: 70%;
     }
 
     .box {
+        height: 50px;
+
+        margin: 5px;
         border: solid 1px rgb(226, 226, 226);
         border-radius: 5px;
+
+        overflow: hidden;
+    }
+
+    .box input {
+        height: 100%;
+
+        margin: 0;
+    }
+
+    .label-name {
+        font-size: smaller;
     }
 
     .divider {
